[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/Utils/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Enemies/TintingKacang/States/Move.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Enemies/TintingKacang/States/Charge.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Enemies/TintingKacang/States/Dead.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Enemies/TintingKacang/TintingKacang.gd" type="Script" id=5]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/idle/tingting-idle6.png" type="Texture" id=6]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/idle/tingting-idle4.png" type="Texture" id=7]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/idle/tingting-idle5.png" type="Texture" id=8]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/idle/tingting-idle3.png" type="Texture" id=9]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/idle/tingting-idle1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/idle/tingting-idle2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/idle/tingting-idle7.png" type="Texture" id=12]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/attacktusuk/tingting-attacktusuk1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/attacktusuk/tingting-attacktusuk4.png" type="Texture" id=14]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/death/tingting-death3.png" type="Texture" id=15]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/death/tingting-death4.png" type="Texture" id=16]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/attacktusuk/tingting-attacktusuk2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/attacktusuk/tingting-attacktusuk3.png" type="Texture" id=18]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/death/tingting-death2.png" type="Texture" id=19]
[ext_resource path="res://Assets/Ting-ting-20201022T141235Z-001/Ting-ting/death/tingting-death1.png" type="Texture" id=20]

[sub_resource type="Animation" id=1]
resource_name = "charge"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 13 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Collider:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Hitbox/Collider:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -250, 80 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("../StateMachine/Charge")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "charge"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Collider:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Hitbox/Collider:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 170, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Hitbox/Collider:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Collider:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "charge"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "move"

[sub_resource type="AnimationNodeTransition" id=7]
input_count = 3
input_0/name = "Move"
input_0/auto_advance = false
input_1/name = "Charge"
input_1/auto_advance = false
input_2/name = "Dead"
input_2/auto_advance = false

[sub_resource type="AnimationNodeBlendTree" id=8]
graph_offset = Vector2( -290.524, 101.5 )
nodes/Charge/node = SubResource( 4 )
nodes/Charge/position = Vector2( -140, 240 )
nodes/Dead/node = SubResource( 5 )
nodes/Dead/position = Vector2( -140, 380 )
nodes/Move/node = SubResource( 6 )
nodes/Move/position = Vector2( -140, 120 )
nodes/States/node = SubResource( 7 )
nodes/States/position = Vector2( 120, 160 )
node_connections = [ "output", 0, "States", "States", 0, "Move", "States", 1, "Charge", "States", 2, "Dead" ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 124.481, 121.366 )

[sub_resource type="CapsuleShape2D" id=10]
radius = 163.514
height = 368.396

[node name="TintingKacang" type="KinematicBody2D"]
scale = Vector2( 0.2, 0.2 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 14 )
offset = Vector2( -250, 80 )

[node name="Animation" type="AnimationPlayer" parent="Sprite"]
anims/charge = SubResource( 1 )
anims/dead = SubResource( 2 )
anims/move = SubResource( 3 )

[node name="Animator" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../Sprite/Animation")
active = true
parameters/States/current = 1

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Charge" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( -3.17474, 214.313 )
shape = SubResource( 9 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 0

[node name="Collider" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 111 )
shape = SubResource( 10 )

[node name="Pointer" type="Node2D" parent="."]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
